--- a/requirements.txt
+++ b/requirements.txt
@@ -12,14 +12,14 @@ psutil  # system resources
 PyYAML>=5.3.1
 requests>=2.23.0
 scipy>=1.4.1
-thop>=0.1.1  # FLOPs computation
+# thop>=0.1.1  # FLOPs computation
 torch>=1.7.0  # see https://pytorch.org/get-started/locally (recommended)
 torchvision>=0.8.1
 tqdm>=4.64.0
 # protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
 
 # Logging ---------------------------------------------------------------------
-tensorboard>=2.4.1
+# tensorboard>=2.4.1
 # clearml>=1.2.0
 # comet
 
